# heimdall

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  logs.txt
examples/: 1.1 many.rs  a_lot.rs  simple.rs  vars.rs  wrap.rs
schemas/: log.fbs
src/: args.rs  data.rs  display.rs  lib.rs  log.rs  logger.rs  macros.rs  main.rs  pipe.rs  schemas.rs  status.rs  storage.rs  tui.rs
src/http/: mod.rs
src/nng/: mod.rs
src/tui/: mod.rs
src/tui/panels/: info.rs  logs.rs  mod.rs  status.rs  threads.rs
src/tui/popups/: exit.rs  mod.rs
